--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head><meta charset="UTF=8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
-<link rel="stylesheet" href="index.css">
+<!-- <link rel="stylesheet" href="index.css"> -->
 </head>
 <body>
     <div>
@@ -20,6 +20,13 @@
         <h1>This is pseudo selector</h1>
         <a href="https://in.search.yahoo.com/">link</a>
     </div>
+    <div>
 <p id="MB">SSMB</p>
+<p align="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus ex a quos maxime vero itaque dignissimos quidem repellat earum numquam corrupti quas iure distinctio, vitae, cupiditate at velit! Aliquid.
+Reiciendis id illum, eligendi repudiandae necessitatibus quasi quia repellendus, animi temporibus tempora facilis earum error placeat vero delectus dignissimos deserunt adipisci consectetur consequatur assumenda? Ut nulla nostrum inventore saepe! Earum?
+Esse modi, laudantium aliquam voluptatibus expedita, magnam suscipit, aperiam nihil porro quos nemo. Soluta aliquam unde distinctio nesciunt molestias quo, libero voluptates aperiam excepturi architecto quam fuga, reiciendis officia non?
+Aut, delectus mollitia! Cum culpa nulla laboriosam distinctio ratione odit. Illo harum vitae possimus rem nihil provident facilis perspiciatis ut animi, natus maiores omnis ipsum officiis repellendus. Nam, alias placeat.</p>
+</div>
+<img src="bossbaby.PNG" title="css">
 </body>
 </html>
